--- a/server/pom.xml
+++ b/server/pom.xml
@@ -63,6 +63,14 @@
     <version>2.0.0</version>
   </dependency>
 
+<!-- https://mvnrepository.com/artifact/ai.api/libai For api.ai's java library -->
+	<dependency>
+    		<groupId>ai.api</groupId>
+    		<artifactId>libai</artifactId>
+    		<version>1.1.0</version>
+	</dependency>
+
+
 </dependencies>
 
   <build>
