--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,18 @@
 
 <dependencies>
 
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.5</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.5</version>
+    </dependency>
+
 <!-- For option-parser -->
   <dependency>
     <groupId>net.sf.jopt-simple</groupId>
