--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,26 @@
 
 <dependencies>
 
+<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.8.3</version>
+</dependency>
+
+<dependency>
+  <groupId>com.google.http-client</groupId>
+  <artifactId>google-http-client-jackson2</artifactId>
+  <version>1.22.0</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.http-client/google-http-client -->
+<dependency>
+    <groupId>com.google.http-client</groupId>
+    <artifactId>google-http-client</artifactId>
+    <version>1.22.0</version>
+</dependency>
+
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
